// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input matches forest theme snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 8,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  />
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderBottomColor": "#22C55E",
          "borderBottomLeftRadius": 9,
          "borderBottomRightRadius": 9,
          "borderBottomWidth": 1,
          "borderLeftColor": "#22C55E",
          "borderLeftWidth": 1,
          "borderRightColor": "#22C55E",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "#22C55E",
          "borderTopLeftRadius": 9,
          "borderTopRightRadius": 9,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <TextInput
        accessibilityState={
          {
            "disabled": false,
          }
        }
        editable={true}
        focusVisibleStyle={
          {
            "outlineColor": "#22C55E66",
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        focusable={true}
        keyboardType="default"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#567A5E"
        secureTextEntry={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderBottomColor": "#E0E8E1",
            "borderBottomLeftRadius": 9,
            "borderBottomRightRadius": 9,
            "borderBottomWidth": 0,
            "borderLeftColor": "#E0E8E1",
            "borderLeftWidth": 0,
            "borderRightColor": "#E0E8E1",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "#E0E8E1",
            "borderTopLeftRadius": 9,
            "borderTopRightRadius": 9,
            "borderTopWidth": 0,
            "color": "#14281A",
            "flex": 1,
            "fontFamily": "Inter_400Regular",
            "fontSize": 14,
            "height": "100%",
            "letterSpacing": 0,
            "minWidth": 0,
            "outlineWidth": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          }
        }
        value="Hello"
      />
    </View>
  </View>
</View>
`;

exports[`Input matches midnight theme snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 8,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  />
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#18181B",
          "borderBottomColor": "#FF6B5E",
          "borderBottomLeftRadius": 9,
          "borderBottomRightRadius": 9,
          "borderBottomWidth": 1,
          "borderLeftColor": "#FF6B5E",
          "borderLeftWidth": 1,
          "borderRightColor": "#FF6B5E",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "#FF6B5E",
          "borderTopLeftRadius": 9,
          "borderTopRightRadius": 9,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <TextInput
        accessibilityState={
          {
            "disabled": false,
          }
        }
        editable={true}
        focusVisibleStyle={
          {
            "outlineColor": "#8B5CF666",
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        focusable={true}
        keyboardType="default"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#A1A1AA"
        secureTextEntry={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderBottomColor": "#27272A",
            "borderBottomLeftRadius": 9,
            "borderBottomRightRadius": 9,
            "borderBottomWidth": 0,
            "borderLeftColor": "#27272A",
            "borderLeftWidth": 0,
            "borderRightColor": "#27272A",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "#27272A",
            "borderTopLeftRadius": 9,
            "borderTopRightRadius": 9,
            "borderTopWidth": 0,
            "color": "#FAFAFA",
            "flex": 1,
            "fontFamily": "Inter_400Regular",
            "fontSize": 14,
            "height": "100%",
            "letterSpacing": 0,
            "minWidth": 0,
            "outlineWidth": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          }
        }
        value="Hello"
      />
    </View>
  </View>
</View>
`;

exports[`Input matches sunrise theme snapshot 1`] = `
<View
  style={
    {
      "flexDirection": "column",
      "gap": 8,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  />
  <View
    style={
      {
        "alignSelf": "flex-start",
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderBottomColor": "#EBE4D5",
          "borderBottomLeftRadius": 9,
          "borderBottomRightRadius": 9,
          "borderBottomWidth": 1,
          "borderLeftColor": "#EBE4D5",
          "borderLeftWidth": 1,
          "borderRightColor": "#EBE4D5",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "borderTopColor": "#EBE4D5",
          "borderTopLeftRadius": 9,
          "borderTopRightRadius": 9,
          "borderTopWidth": 1,
          "flexDirection": "row",
          "height": 48,
          "paddingLeft": 12,
          "paddingRight": 12,
        }
      }
    >
      <TextInput
        accessibilityState={
          {
            "disabled": false,
          }
        }
        editable={true}
        focusVisibleStyle={
          {
            "outlineColor": "#F59E0B66",
            "outlineStyle": "solid",
            "outlineWidth": 2,
          }
        }
        focusable={true}
        keyboardType="default"
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#786E5D"
        secureTextEntry={false}
        style={
          {
            "backgroundColor": "transparent",
            "borderBottomColor": "#EBE4D5",
            "borderBottomLeftRadius": 9,
            "borderBottomRightRadius": 9,
            "borderBottomWidth": 0,
            "borderLeftColor": "#EBE4D5",
            "borderLeftWidth": 0,
            "borderRightColor": "#EBE4D5",
            "borderRightWidth": 0,
            "borderStyle": "solid",
            "borderTopColor": "#EBE4D5",
            "borderTopLeftRadius": 9,
            "borderTopRightRadius": 9,
            "borderTopWidth": 0,
            "color": "#271F15",
            "flex": 1,
            "fontFamily": "Inter_400Regular",
            "fontSize": 14,
            "height": "100%",
            "letterSpacing": 0,
            "minWidth": 0,
            "outlineWidth": 0,
            "paddingBottom": 0,
            "paddingLeft": 0,
            "paddingRight": 0,
            "paddingTop": 0,
          }
        }
        value="Hello"
      />
    </View>
  </View>
</View>
`;
